--- a/README.html
+++ b/README.html
@@ -19,7 +19,7 @@
 </nav>
 <article class="markdown-body">
 <h1 id="markdownviewer">MarkdownViewer</h1>
-<p>MarkdownViewer是Total Commander的创建，支持浏览markdown文件。</p>
+<p>MarkdownViewer是一款Total Commander的插件，用于浏览markdown文件，支持后缀为md和markdown的文件。</p>
 <figure>
 <img src="./Doc/viewer.png" />
 </figure>
